# quad_anim

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/quad_anim/: animWindowNode.h
include/quad_anim/shaders/: infPlane.fs  infPlane.vs
launch/: animWindow_launch.py
scripts/: genGeomVects.py
shaders/: infPlane.fs  infPlane.vs
src/: animWindowNode.cpp  anim_window.cpp
