<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quad_anim</name>
  <version>0.0.0</version>
  <description>This package animates a quadcopter based on the state information received from the simulation package.</description>
  <maintainer email="vatsalasitkumar.joshi@uta.edu">Vatsal Joshi</maintainer>
  <license>Apache-2.0</license>

  <depend>gnuplot</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>